# dailydevq-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  create_table.py  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: deploy-backend.yml
dailydevq_backend/: __init__.py  main.py
dailydevq_backend/api/v1/: auth.py  subscribe.py
dailydevq_backend/core/: config.py  database.py
dailydevq_backend/models/: user.py
dailydevq_backend/schemas/: user.py
dailydevq_backend/services/: google_oauth.py  user_service.py
dailydevq_backend/utils/: init_dynamodb.py  jwt.py
docs/: cost-estimation.md  deployment.md  railway-deployment.md  troubleshooting.md
